--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,13 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-steps:
-- script: |
-    sudo apt -y install libedit-dev nasm
-    make
-  displayName: 'make'
+jobs:
+  - job: prepare
+    steps:
+    - script: sudo apt-get install -y libedit-dev nasm clang
+  - job: build_gcc
+    steps:
+    - script: CC=gcc make
+  - job: build_clang
+    steps:
+    - script: CC=clang make
