--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,6 @@ jobs:
       vmImage: 'ubuntu-latest'
     container: debian:unstable-slim
     steps:
-    - script: sudo apt-get install -y build-essential libedit-dev nasm clang
+    - script: apt-get install -y build-essential libedit-dev nasm clang
     - script: CC=gcc make
     - script: CC=clang make
