--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,8 +8,7 @@ jobs:
   - job: x64
     pool:
       vmImage: 'ubuntu-latest'
-    container: ubuntu:latest
     steps:
-    - script: sudo apt-get install -y libedit-dev nasm clang gcc make
-    - script: CC=gcc make
-    - script: CC=clang make
+    - bash: |
+        set -ex
+        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; cd /t; apt update; apt install -y libedit-dev nasm clang gcc make; CC=gcc make"
