Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,4 +11,10 @@ jobs:
     steps:
     - bash: |
         set -ex
-        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; cd /t; apt update; apt install -y libedit-dev nasm clang gcc make; CC=gcc make"
+        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; cd /t; apt update; apt install -y libedit-dev nasm gcc clang make;
+    - bash: |
+        set -ex
+        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; cd /t;  CC=gcc make"
+    - bash: |
+        set -ex
+        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; cd /t;  CC=clang make"
