Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,7 @@ jobs:
     steps:
     - bash: |
         set -ex
-        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; cd /t; apt update; apt install -y libedit-dev nasm gcc clang make"
+        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
     - bash: |
         set -ex
-        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; cd /t;  CC=gcc make"
-    - bash: |
-        set -ex
-        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; cd /t;  CC=clang make"
+        docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
