--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,4 +14,24 @@ jobs:
         docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
     - bash: |
         set -ex
+        make clean
+    - bash: |
+        set -ex
         docker run -v $PWD:/t debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
+
+  - job: arm64
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - bash: |
+        set -ex
+        docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+    - bash: |
+        set -ex
+        docker run -v $PWD:/t arm64v8/debian:latest /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
+    - bash: |
+        set -ex
+        make clean
+    - bash: |
+        set -ex
+        docker run -v $PWD:/t arm64v8/debian:latest /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
