--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,13 +11,13 @@ jobs:
     steps:
     - bash: |
         set -ex
-        docker run -v $PWD:/t amd64/debian:latest-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
+        docker run -v $PWD:/t amd64/debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
     - bash: |
         set -ex
-        docker run -v $PWD:/t amd64/debian:latest-slim /bin/bash -c "set -ex; make clean"
+        docker run -v $PWD:/t amd64/debian:unstable-slim /bin/bash -c "set -ex; make clean"
     - bash: |
         set -ex
-        docker run -v $PWD:/t amd64/debian:latest-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
+        docker run -v $PWD:/t amd64/debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
 
   - job: arm64
     pool:
@@ -28,13 +28,13 @@ jobs:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
     - bash: |
         set -ex
-        docker run -v $PWD:/t arm64v8/debian:latest-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
+        docker run --rm -v $PWD:/t arm64v8/debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
     - bash: |
         set -ex
-        docker run -v $PWD:/t arm64v8/debian:latest-slim /bin/bash -c "set -ex; make clean"
+        docker run --rm -v $PWD:/t arm64v8/debian:unstable-slim /bin/bash -c "set -ex; make clean"
     - bash: |
         set -ex
-        docker run -v $PWD:/t arm64v8/debian:latest-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
+        docker run --rm -v $PWD:/t arm64v8/debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
 
   - job: armv7l
     pool:
@@ -45,13 +45,13 @@ jobs:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
     - bash: |
         set -ex
-        docker run -v $PWD:/t arm32v7/debian:latest-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
+        docker run --rm -v $PWD:/t arm32v7/debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
     - bash: |
         set -ex
-        docker run -v $PWD:/t arm32v7/debian:latest-slim /bin/bash -c "set -ex; make clean"
+        docker run --rm -v $PWD:/t arm32v7/debian:unstable-slim /bin/bash -c "set -ex; make clean"
     - bash: |
         set -ex
-        docker run -v $PWD:/t arm32v7/debian:latest-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
+        docker run --rm -v $PWD:/t arm32v7/debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
 
   - job: i386
     pool:
@@ -62,10 +62,7 @@ jobs:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
     - bash: |
         set -ex
-        docker run -v $PWD:/t i386/debian:latest-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
+        docker run --rm -v $PWD:/t i386/debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm gcc make; cd /t; CC=gcc make"
     - bash: |
         set -ex
-        docker run -v $PWD:/t i386/debian:latest-slim /bin/bash -c "set -ex; make clean"
-    - bash: |
-        set -ex
-        docker run -v $PWD:/t i386/debian:latest-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
+        docker run --rm -v $PWD:/t i386/debian:unstable-slim /bin/bash -c "set -ex; apt update; apt install -y libedit-dev nasm make clang; cd /t; CC=clang make"
