--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
     - bash: |
         set -ex
-        docker run -v $PWD:/t amd64/debian:unstable-slim /bin/bash -c "set -ex; apt-get update; apt-get install -y libedit-dev nasm make gcc; cd /t; CC=gcc make"
+        docker run -v $PWD:/t amd64/debian:unstable-slim /bin/bash -c "set -ex; apt-get update; apt-get install -y libedit-dev nasm make gcc; cd /t; CC=gcc make test"
     - script:
         sudo make clean
     - bash: |
         set -ex
-        docker run -v $PWD:/t amd64/debian:unstable-slim /bin/bash -c "set -ex; apt-get update; apt-get install -y libedit-dev nasm make clang; cd /t; CC=clang make"
+        docker run -v $PWD:/t amd64/debian:unstable-slim /bin/bash -c "set -ex; apt-get update; apt-get install -y libedit-dev nasm make clang; cd /t; CC=clang make test"
 
   - job: arm64
     pool:
@@ -59,9 +59,9 @@ jobs:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
     - bash: |
         set -ex
-        docker run --rm -v $PWD:/t i386/debian:unstable-slim /bin/bash -c "set -ex; apt-get update; apt-get install -y libedit-dev nasm make gcc; cd /t; ARCH=x86 CC=gcc make"
+        docker run --rm -v $PWD:/t i386/debian:unstable-slim /bin/bash -c "set -ex; apt-get update; apt-get install -y libedit-dev nasm make gcc; cd /t; ARCH=x86 CC=gcc make test"
     - script:
         sudo make clean
     - bash: |
         set -ex
-        docker run --rm -v $PWD:/t i386/debian:unstable-slim /bin/bash -c "set -ex; apt-get update; apt-get install -y libedit-dev nasm make clang; cd /t; ARCH=x86 CC=clang make"
+        docker run --rm -v $PWD:/t i386/debian:unstable-slim /bin/bash -c "set -ex; apt-get update; apt-get install -y libedit-dev nasm make clang; cd /t; ARCH=x86 CC=clang make test"
